<resources>
    <string name="app_name">TrabajoFinal</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_perfil">Perfil</string>
    <string name="menu_inmueble">Inmueble</string>
    <string name="menu_inquilinos">Inquilinos</string>
    <string name="menu_inquilino">Inquilino</string>
    <string name="menu_pagos">Pagos</string>
    <string name="menu_contratos">Contratos</string>
    <string name="menu_salir">Salir</string>

    <string name="usuario_login">Usuario</string>
    <string name="contraseña_login">Contraseña</string>
    <string name="entrar_btn">Entrar</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>