<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_perfil"
            android:icon="@drawable/perfil"
            android:title="@string/menu_perfil" />
        <item
            android:id="@+id/nav_slideshow"
            android:icon="@drawable/inquilino"
            android:title="@string/menu_inquilinos" />
        <item
            android:id="@+id/nav_gallery"
            android:icon="@drawable/propiedades"
            android:title="@string/menu_propiedades" />
        <item
            android:id="@+id/pagosFragment"
            android:icon="@drawable/pagos"
            android:title="@string/menu_pagos" />
        <item
            android:id="@+id/contratoFragment"
            android:icon="@drawable/contrato"
            android:title="@string/menu_contratos" />
    </group>
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_salir"
            android:icon="@drawable/cerrar_sesion"
            android:title="@string/menu_salir" />

    </group>
</menu>